--- a/surrogate/backend/pyproject.toml
+++ b/surrogate/backend/pyproject.toml
@@ -9,6 +9,7 @@ numpy = "^1.26.4"
 torch = "^2.2.2"
 scipy = "^1.13.0"
 open_clip_torch = "^2.23.0"
+python-multipart = "^0.0.20"
 
 [build-system]
 requires = ["poetry-core"]
